# TEST

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/backtest/: analyzers.py  commission.py  datasets.py  engine.py  slippage.py
app/brokers/: ibkr_adapter.py
app/graph/: builder.py  state.py
app/graph/nodes/: __init__.py  compute_metrics.py  decide_next_round.py  deduplicate.py  generate_candidates.py  load_baseline.py  load_state.py  persist_state.py  rank_candidates.py  run_backtests.py  summarize_round.py  validate_candidates.py
app/llm/: client.py  proposer.py  summarizer.py
app/paper/: runner.py
app/ranking/: constraints.py  scorer.py
app/signals/: tradingview_webhook.py
app/storage/: db.py  models.py  repositories.py
app/storage/migrations/: 0001_init.sql
app/strategies/: base.py  macd_obv_vwap.py  mutations.py  parameter_schema.py
app/utils/: hashing.py  logging.py  serialization.py
tests/: test_backtest.py  test_graph_recovery.py  test_hashing.py  test_metrics.py  test_ranking.py  test_storage.py  test_validation.py
